# Homework_20.1

./: .gitignore  Homework_20.1  README.md  groups_data.json  pyproject.toml
catalog/: admin.py  models.py  urls.py
catalog/management/commands/: del_and_create_category.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py
config/: settings.py
